bootstrap/argocd/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
  - host: argo.echesec.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: argocd-server
             port:
               name: http
  tls:
  - hosts:
    - argo.echesec.com
    secretName: argocd-secret # do not change, this is provided by Argo CD
